--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "antd": "^5.17.0",
+    "axios": "^1.6.8",
+    "lodash.debounce": "^4.0.8",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.1",
+    "@types/moment": "^2.13.0",
+    "@types/styled-components": "^5.1.34"
   }
 }
