--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.3.0",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "react": "^18.3.1",
